; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/genet/extr_bcmgenet.c_bcmgenet_tx_reclaim.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/genet/extr_bcmgenet.c_bcmgenet_tx_reclaim.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.bcmgenet_tx_ring = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, %struct.bcmgenet_tx_ring*)* @bcmgenet_tx_reclaim to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bcmgenet_tx_reclaim(%struct.net_device* %0, %struct.bcmgenet_tx_ring* %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.bcmgenet_tx_ring*, align 8
  %5 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store %struct.bcmgenet_tx_ring* %1, %struct.bcmgenet_tx_ring** %4, align 8
  %6 = load %struct.bcmgenet_tx_ring*, %struct.bcmgenet_tx_ring** %4, align 8
  %7 = getelementptr inbounds %struct.bcmgenet_tx_ring, %struct.bcmgenet_tx_ring* %6, i32 0, i32 0
  %8 = call i32 @spin_lock_bh(i32* %7)
  %9 = load %struct.net_device*, %struct.net_device** %3, align 8
  %10 = load %struct.bcmgenet_tx_ring*, %struct.bcmgenet_tx_ring** %4, align 8
  %11 = call i32 @__bcmgenet_tx_reclaim(%struct.net_device* %9, %struct.bcmgenet_tx_ring* %10)
  store i32 %11, i32* %5, align 4
  %12 = load %struct.bcmgenet_tx_ring*, %struct.bcmgenet_tx_ring** %4, align 8
  %13 = getelementptr inbounds %struct.bcmgenet_tx_ring, %struct.bcmgenet_tx_ring* %12, i32 0, i32 0
  %14 = call i32 @spin_unlock_bh(i32* %13)
  %15 = load i32, i32* %5, align 4
  ret i32 %15
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @__bcmgenet_tx_reclaim(%struct.net_device*, %struct.bcmgenet_tx_ring*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
